--- a/Chat.FrontWeb/Web.config
+++ b/Chat.FrontWeb/Web.config
@@ -51,7 +51,7 @@
   </system.codedom>
 
   <connectionStrings>
-    <add name="connStr" connectionString="data source=192.168.1.50;initial catalog=WebMvcDemo2;user id=user_NN18042215;password=NN18042215" providerName="System.Data.SqlClient" />
+    <add name="connStr"  connectionString="Data Source=.;Initial Catalog=Dome1;user id=sa;password=123456;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <log4net>
